# machine-learning-compilers

./: .clang-format  .gitignore  CMakeLists.txt  README.md  gen_correct.dis  gen_false.dis
.github/workflows/: CI.yml  benchmarks.yml  ci.yml  docs.yml  tar-project-report.yml
cmake-library/: README.md  user-guide.md
cmake-library/example-project/: CMakeLists.txt  Example.cpp
docs_sphinx/: Doxyfile.in  conf.py  index.rst  requirements.txt
docs_sphinx/_static/resources/: GEMM_benchmarks.csv
docs_sphinx/_static/resources/report_25_05_15/: BR_GEMM_benchmarks.csv  GEMM_benchmarks.csv
docs_sphinx/api/: mini_jit.rst  mlc.rst
docs_sphinx/chapters/: assembly.rst  base.rst  code_generation.rst  einsum_trees.rst  neon.rst  overview.rst  report_individual.rst  tensor_operations.rst
docs_sphinx/getting_started/: building_docs.rst  building_project.rst
docs_sphinx/submissions/: report_25_04_17.rst  report_25_04_24.rst  report_25_05_01.rst  report_25_05_08.rst  report_25_05_15.rst  report_25_05_22.rst  report_25_05_29.rst  report_25_06_05.rst  report_25_06_06.rst  report_25_06_12.rst  report_25_06_19.rst  report_individual.rst
include/MachineLearningCompiler/: All.h  Error.h  Setup.h  Tensor.h  UnaryType.h  tensor.h
scripts/: convert_GEMM_benchmark_to_csv.py  generate_register.py  plot_GEMM_benchmark.ipynb
src/interface/: Contraction.cpp  Einsum.cpp  Einsum.h  Gemm.cpp  Setup.cpp  SetupEinsum.cpp  SetupEinsum.h  Tensor.cpp  TensorUtils.h  Unary.cpp
src/main/: Brgemm.cpp  Brgemm.h  EinsumTree.cpp  EinsumTree.h  Kernel.cpp  Kernel.h  TensorConfig.cpp  TensorConfig.h  TensorOperation.cpp  TensorOperation.h  TensorOptimization.cpp  TensorOptimization.h  Unary.cpp  Unary.h  release_assert.h
src/main/arm_instructions/: arm_all.h  register.h
src/main/arm_instructions/base/: add.h  base_all.h  cbnz.h  ldp.h  ldr.h  lsl.h  madd.h  mov.h  movn.h  movz.h  orr.h  ret.h  stp.h  sub.h
src/main/arm_instructions/register/: general_purpose.h  vector.h
src/main/arm_instructions/simd-fp/: fmla.h  ld1.h  ldp.h  ldr.h  simd-fp_all.h  st1.h  stp.h
src/main/arm_instructions/simd_fp/: eor.h  fmax.h  fmla.h  ld1.h  ldp.h  ldr.h  simd_fp_all.h  st1.h  stp.h  str.h  trn1.h  trn2.h  zip1.h  zip2.h
src/main/kernels/: br_matmul_16mRest_4n_k.cpp  br_matmul_16mRest_4n_k.h  br_matmul_16mRest_lt4nRest_k.cpp  br_matmul_16mRest_lt4nRest_k.h  br_matmul_16m_4n_k.cpp  br_matmul_16m_4n_k.h  br_matmul_16m_lt4nRest_k.cpp  br_matmul_16m_lt4nRest_k.h  br_matmul_lt16_4n_k.cpp  br_matmul_lt16_4n_k.h  br_matmul_lt16_lt4nRest_k.cpp  br_matmul_lt16_lt4nRest_k.h  br_matmul_lt16_lt4nRest_k_batch_only_around_inner_kernel.cpp  matmul_16_6_1.cpp  matmul_16_6_1.h  matmul_16_6_k.cpp  matmul_16_6_k.h  matmul_16mRest_4nRest_k.cpp  matmul_16mRest_4nRest_k.h  matmul_16mRest_4n_k.cpp  matmul_16mRest_4n_k.h  matmul_16mRest_lt4nRest_k.cpp  matmul_16mRest_lt4nRest_k.h  matmul_16m_4nRest_k.cpp  matmul_16m_4nRest_k.h  matmul_16m_4n_k.cpp  matmul_16m_4n_k.h  matmul_16m_lt4nRest_k.cpp  matmul_16m_lt4nRest_k.h  matmul_lt16_4n_k.cpp  matmul_lt16_4n_k.h  matmul_lt16_lt4nRest_k.cpp  matmul_lt16_lt4nRest_k.h  matmuls_all.h
src/main/kernels/unary/: unary_all.h  unary_identity.cpp  unary_identity.h  unary_identity_transpose.cpp  unary_identity_transpose.h  unary_relu.cpp  unary_relu.h  unary_relu_transpose.cpp  unary_relu_transpose.h  unary_zero.cpp  unary_zero.h  unary_zero_16m_n.cpp  (+3 more)
src/mlc/: test.h
src/test/: BaseGeneration.test.cpp  BaseGeneration.test.h  Brgemm.test.cpp  EinsumTree.bench.cpp  EinsumTree.test.cpp  TensorOperation.bench.cpp  TensorOperation.test.cpp  TensorOptimization.bench.cpp  TensorOptimization.test.cpp
src/test/interface/: Setup.test.cpp  Tensor.test.cpp  TensorOperation.test.cpp  TensorUtils.test.cpp
src/test/kernels/: br_matmul_16mRest_4n_k.test.cpp  br_matmul_16mRest_lt4nRest_k.test.cpp  br_matmul_16m_4n_k.test.cpp  br_matmul_16m_lt4nRest_k.test.cpp  br_matmul_lt16_4n_k.test.cpp  br_matmul_lt16_lt4nRest_k.test.cpp  matmul.bench.cpp  matmul.bench.h  matmul.test.cpp  matmul.test.h  matmul_16_6_1.bench.cpp  matmul_16_6_1.test.cpp  matmul_16_6_k.bench.cpp  matmul_16_6_k.test.cpp  matmul_16mRest_4nRest_k.n1.test.cpp  matmul_16mRest_4nRest_k.n2.test.cpp  matmul_16mRest_4nRest_k.n3.test.cpp  matmul_16mRest_4nRest_k.test.cpp  matmul_16mRest_4n_k.test.cpp  matmul_16mRest_lt4nRest_k.test.cpp  matmul_16m_4nRest_k.test.cpp  matmul_16m_4n_k.test.cpp  matmul_16m_lt4nRest_k.test.cpp  matmul_lt16_4n_k.test.cpp  matmul_lt16_lt4nRest_k.test.cpp
submissions/assembly/: add_values.cpp
submissions/base/: benchmark.s  copy_driver.cpp
submissions/neon/: CMakeLists.txt  neon_1_1.s  neon_1_1_driver.cpp  neon_1_2_driver.cpp  neon_2.h  neon_2_unrolled.s  neon_3.test.cpp  neon_3_1.s  neon_4.bench.cpp  neon_4.test.cpp  neon_4_1.s  neon_4_2.s  neon_5.h  neon_5_1-base-line.s  neon_6.bench.cpp  neon_6.h  neon_6.test.cpp  neon_6_1.s  neon_6_1_no_batch.s  neon_7.bench.cpp  trans_neon_4_4.s
submissions/submission_25_04_17/: add_values.cpp  hello_assembly.cpp  hello_assembly_clang.s  report.md  report.rst
submissions/submission_25_04_24/: benchmark.s  benchmark_driver.cpp  copy_asm.s
submissions/submission_25_05_01/: CMakeLists.txt  neon_1_1_driver.cpp  neon_1_2.s  neon_1_2_driver.cpp  neon_2.bench.cpp  neon_2.h  neon_2.test.cpp  neon_2_1.bench.cpp  neon_2_1.cpp  neon_2_1.h  neon_2_1.s  neon_2_1.test.cpp  neon_2_1_driver.cpp  neon_2_1_old.cpp  neon_2_1_old.s  neon_2_1_optimized.s  neon_2_1_unrolled.s  neon_2_driver.cpp  neon_2_simple.s  neon_3.bench.cpp  neon_3.h  neon_3.test.cpp  neon_3_1.s  neon_3_2.s  neon_3_3.s
submissions/submission_25_05_08/: CMakeLists.txt  neon_4.bench.cpp  neon_4.h  neon_4.test.cpp  neon_4_1.s  neon_4_2.s  neon_5.bench.cpp  neon_5.h  neon_5.test.cpp  neon_5_1.s
submissions/submission_25_05_15/: neon_6.bench.cpp  neon_6.h  neon_6.test.cpp  neon_6_1.s  neon_6_1_batch1.s
submissions/submission_25_05_22/: CMakeLists.txt  neon_7.bench.cpp  neon_7.h  neon_7.test.cpp  neon_7_1.s
submissions/submission_25_05_25/: CMakeLists.txt  neon_6.bench.cpp  neon_6.h  neon_6_1.s  neon_6_1_batch1.s
(+52 files in other folders)
